--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+sunmake (2006.12.19-1) unstable; urgency=low
+
+  * sunmake should depends on libmakestate1.
+    libmakestate.so.1 is used by sunld to report .make.state info back to
+    sunmake.  sunmake defines environment variable which instruct sunld to
+    dlopen() libmakestate.so.1
+  * Use 3.0 (quilt) format, not native
+
+ -- Igor Pashev <pashev.igor@gmail.com>  Thu, 25 Apr 2013 00:54:05 +0400
+
 sunmake (2006.12.19) unstable; urgency=low
 
   * Initial release.
