--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,10 @@ sunmake (2006.12.19-1) unstable; urgency=low
     sunmake.  sunmake defines environment variable which instruct sunld to
     dlopen() libmakestate.so.1
   * Use 3.0 (quilt) format, not native
+  * Use pritine-tar and normal git repo for packaging
+  * Remove build dependency on autotools
 
- -- Igor Pashev <pashev.igor@gmail.com>  Thu, 25 Apr 2013 00:54:05 +0400
+ -- Igor Pashev <pashev.igor@gmail.com>  Thu, 25 Apr 2013 01:44:13 +0400
 
 sunmake (2006.12.19) unstable; urgency=low
 
